feat: start html

--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8" />
-        <title>Webpack App</title>
-    </head>
-    <body>
-        <h1>Hello world!</h1>
-        <h2>Tip: Check your console</h2>
-    </body>
-    
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>RSS-aggregator</title>
+</head>
+<body>
+    <div class="container">
+        <div class="row">
+            <div class="header">
+                <h1 class="h1">RSS агрегатор</h1>
+                <p>Начните читать RSS сегодня! Это легко, это красиво.</p>
+                <form>
+                    <div class="form-floating mb-3">
+                        <input type="text" class="form-control" id="floatingInput" placeholder="Ссылка RSS">
+                        <label for="floatingInput">Ссылка RSS</label>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</body>
 </html>
