--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
     <title>RSS-aggregator</title>
 </head>
 <body class="d-flex flex-column min-vh-100">
+    <div class="modal fade" id="modal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalLabel"></h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                </div>
+                <div class="modal-footer">
+                    <a class="btn btn-primary full-article" href="" role="button" target="_blank" rel="noopener noreferrer"></a>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"></button>
+                </div>
+            </div>
+        </div>
+    </div>
     <main class="flex-grow-1">
         <section class="container-fluid bg-dark bg-carbon p-5">
             <div class="row">
